Issue 1800: Inspect shows no highlight borders when HTML and BODY are set to overflow:hidden
http://code.google.com/p/fbug/source/detail?r=3037

--- a/extension/content/firebug/highlighter.css
+++ b/extension/content/firebug/highlighter.css
@@ -9,6 +9,7 @@
     width:1px;
     height:1px;
     background:url();
+    overflow:visible;
 }
 
 .firebugCanvas {
